--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 		<script type="text/javascript" src="calci.js"> </script>
 	</head>
-	<body>
+	<body onresize="resize()">
 		<!-- Description about myself -->
 		<h4>SPIDER WEB DEVELOPMENT TASK 1:</h4>
 		<p id="name"> My name is VENKATESH <br/> I'm pursuing B.Tech Computer Science Engineering from NIT Trichy. </p>
@@ -16,7 +16,7 @@
 		<p id="CVIII"> I keep myself updated with the latest technological developments.<br/>I love developing webpages and competitive coding.</p>
 		
 		<p id="aim"> I would love to be a part of <strong> the SPIDER club</strong> for the next 3 years.</p>
-	</body>
+	
 	<div>
 		<h5> CALCULATOR: </h5>
 		<table align="center">
@@ -29,32 +29,52 @@
 			<td class="operator" onclick="valu('cancel')">C</td>
 			<td class="operator" onclick="valu('(')">(</td>
 			<td class="operator" onclick="valu(')')">)</td>
+			
 		</tr>
 		<tr>
 			<td onclick="valu('7')">7</td>
 			<td onclick="valu('8')">8</td>
 			<td onclick="valu('9')">9</td>
 			<td class="operator" onclick="valu('/')">/</td>
+			<td id="sci" class="operator" onclick=' sqrt(document.getElementById("result").value)'>sqrt</td>
+			<td id="sci" class="operator" onclick=' fact(document.getElementById("result").value)'>X!</td>
+			
 `		</tr>
 		<tr>
 			<td onclick="valu('4')">4</td>
 			<td onclick="valu('5')">5</td>
 			<td onclick="valu('6')">6</td>
 			<td class="operator" onclick="valu('*')">*</td>
+			<td id="sci" class="operator" onclick=' cos(document.getElementById("result").value)'>cosX</td>
+			<td id="sci" class="operator" onclick=' sq(document.getElementById("result").value)'>X<sup>2</sup></td>
+			
 		</tr>
 		<tr>
 			<td onclick="valu('1')">1</td>
 			<td onclick="valu('2')">2</td>
 			<td onclick="valu('3')">3</td>
 			<td class="operator" onclick="valu('-')">-</td>
+			<td id="sci" class="operator" onclick=' sin(document.getElementById("result").value)'>sinX</td>
+			<td id="sci" class="operator" onclick=' cube(document.getElementById("result").value)'>X<sup>3</sup></td>
+			
+				
 		</tr>
 		<tr>
 			<td onclick="valu('.')">.</td>
 			<td onclick="valu('0')">0</td>
 			<td class="operator" onclick="valu('=')">=</td>
-			<td class="operator" onclick="valu('+')">+</td>
+			<td class="operator" onclick="valu('+')">+</td>	
+			<td id="sci" class="operator" onclick='tan(document.getElementById("result").value)'>tanX</td>
+			<td id="sci" class="operator" onclick=' log(document.getElementById("result").value)'>ln</sup></td>
+			
+			
 		</tr>
 		</table>
+		
 	</div>
+	<p id="CVI" text-align="left">please enter valid expressions before evaluations</p>
 	<h1 text align=center > <strong> THANK YOU FOR VISITING THIS WEBPAGE!! </strong> </h1>
+	</body>
 	</html>
+
+
